--- a/iac/.github/workflows/plan-on-pr.yml
+++ b/iac/.github/workflows/plan-on-pr.yml
@@ -4,6 +4,17 @@ on:
   pull_request:
     branches:
       - main
+    paths:
+    - 'iac/**'
+
+concurrency: 
+  group: ${{ github.action == 'Google Cloud IaC Create Resources' }}
+  cancel-in-progress: true
+
+defaults:
+  run:
+    shell: bash
+    working-directory: ./iac
 
 jobs:
   lint:
