--- a/iac/.github/workflows/plan-on-pr.yml
+++ b/iac/.github/workflows/plan-on-pr.yml
@@ -2,8 +2,9 @@ name: Plan / Test On PR
 
 on:
   pull_request:
-    branches:
-      - main
+    branches: 
+    - "dev"
+    - "main"
     paths:
     - 'iac/**'
 
@@ -19,7 +20,7 @@ defaults:
 jobs:
   lint:
     name: Lint
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     permissions:
       contents: 'read'
       id-token:  'write'
@@ -34,7 +35,7 @@ jobs:
           terraform_version: 1.0.9
 
       - name: Run terraform fmt check
-        run: terraform fmt -check -diff -recursive ./terraform
+        run: terraform fmt -check -diff -recursive ./iac
 
   plan:
     name: Plan
