--- a/iac/.github/workflows/plan-on-pr.yml
+++ b/iac/.github/workflows/plan-on-pr.yml
@@ -1,10 +1,11 @@
 name: Plan / Test On PR
 
 on:
+  push:
+    branches: [ local ]
   pull_request:
-    branches: 
+    branches:
     - "dev"
-    - "main"
     paths:
     - 'iac/**'
 
@@ -35,7 +36,7 @@ jobs:
           terraform_version: 1.0.9
 
       - name: Run terraform fmt check
-        run: terraform fmt -check -diff -recursive ./iac
+        run: terraform fmt -check -diff -recursive iac/**
 
   plan:
     name: Plan
