--- a/iac/.github/workflows/plan-on-pr.yml
+++ b/iac/.github/workflows/plan-on-pr.yml
@@ -2,7 +2,7 @@ name: Plan / Test On PR
 
 on:
   push:
-    branches: [ local ]
+    branches: [ "local" ]
   pull_request:
     branches:
     - "dev"
