adding path to the github workflow

--- a/iac/.github/workflows/plan-on-pr.yml
+++ b/iac/.github/workflows/plan-on-pr.yml
@@ -1,10 +1,9 @@
 name: Plan / Test On PR
 
 on:
-  push:
-    branches: [ "local" ]
   pull_request:
     branches:
+    - "local"
     - "dev"
     paths:
     - 'iac/**'
