--- a/.github/workflows/plan-on-pr.yml
+++ b/.github/workflows/plan-on-pr.yml
@@ -2,9 +2,7 @@ name: Plan / Test On PR
 
 on:
   pull_request:
-    branches:
-    - "local"
-    - "dev"
+    branches: [ "dev" ]
     paths:
     - 'iac/**'
 
@@ -35,7 +33,7 @@ jobs:
           terraform_version: 1.0.9
 
       - name: Run terraform fmt check
-        run: terraform fmt -check -diff -recursive iac/**
+        run: terraform fmt -check -diff -recursive ./iac**
 
   plan:
     name: Plan
