--- a/.github/workflows/apply-on-merge.yml
+++ b/.github/workflows/apply-on-merge.yml
@@ -152,7 +152,7 @@ jobs:
   slack_notification:
     name: 'Slack Notification'
     runs-on: ubuntu-latest
-    needs: [terraform_plan, terraform_apply]
+    needs: [plan_and_apply]
     if: always()
 
     steps:
