--- a/.github/workflows/plan-on-pr.yml
+++ b/.github/workflows/plan-on-pr.yml
@@ -2,7 +2,9 @@ name: Plan / Test On PR
 
 on:
   pull_request:
-    branches: [ "dev" ]
+    branches: 
+    - "dev" 
+    - "local"
     paths:
     - 'iac/**'
 
