--- a/.github/workflows/apply-on-merge.yml
+++ b/.github/workflows/apply-on-merge.yml
@@ -2,9 +2,11 @@ name: Plan / Apply On Merge
 
 on:
   push:
-    branches:
-    - "dev"
-    - "main"
+    branches: [ "dev" ]
+    paths:
+    - 'iac/**'
+  pull_request:
+    branches: [ "main" ] 
     paths:
     - 'iac/**'
 
