--- a/.github/workflows/plan-on-pr.yml
+++ b/.github/workflows/plan-on-pr.yml
@@ -1,10 +1,12 @@
 name: Plan / Test On PR
 
 on:
+  push:
+    branches: [ "local" ]
+    paths:
+    - 'iac/**'
   pull_request:
-    branches: 
-    - "dev" 
-    - "local"
+    branches: [ "dev" ]     
     paths:
     - 'iac/**'
 
