--- a/.github/workflows/plan-on-pr.yml
+++ b/.github/workflows/plan-on-pr.yml
@@ -66,8 +66,8 @@ jobs:
         id: auth
         uses: google-github-actions/auth@v0
         with:
-          workload_identity_provider: '${{ secrets.WIF_PROVIDER_NAME }}'  
-          service_account: '${{ secrets.SERVICE_ACCOUNT_EMAIL }}'
+          workload_identity_provider: '${{ secrets.WIF_PROVIDER_NAME }}'   
+          service_account: 'github_actions_sa@${ PROJECT_ID }.iam.gserviceaccount.com'
       - id: 'list-buckets-contents'
         run: |-
           curl -sSf https://storage.googleapis.com/storage/v1/b/iodc-keystore/o \
