--- a/.github/workflows/plan-on-pr.yml
+++ b/.github/workflows/plan-on-pr.yml
@@ -55,22 +55,22 @@ jobs:
 
     steps:
       - name: Check out code
-        uses: actions/checkout@v2
+        uses: 'actions/checkout@v3'
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
         with:
           terraform_version: 1.0.9
 
-      - name: Authenticate to Google Cloud
-        id: auth
-        uses: google-github-actions/auth@v0
+      - id: 'auth'
+        name: 'Authenticate to Google Cloud'
+        uses: 'google-github-actions/auth@v1'
         with:
           workload_identity_provider: '${{ secrets.WIF_PROVIDER_NAME }}'   
           service_account: 'github_actions_sa@${ PROJECT_ID }.iam.gserviceaccount.com'
           token_format: 'access_token'
           access_token_lifetime: '300s'
-          
+
       - name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@v0
       
