--- a/.github/workflows/plan-on-pr.yml
+++ b/.github/workflows/plan-on-pr.yml
@@ -66,7 +66,7 @@ jobs:
         name: 'Authenticate to Google Cloud'
         uses: 'google-github-actions/auth@v1'
         with:
-          workload_identity_provider: '${{ secrets.WIF_PROVIDER_NAME }}'   
+          workload_identity_provider: 'projects/157381548024/locations/global/workloadIdentityPools/lambda-pool/providers/gh-oidc-provider' 
           service_account: 'github_actions_sa@${ PROJECT_ID }.iam.gserviceaccount.com'
           token_format: 'access_token'
           access_token_lifetime: '300s'
