--- a/.github/workflows/plan-on-pr.yml
+++ b/.github/workflows/plan-on-pr.yml
@@ -40,12 +40,11 @@ jobs:
     name: Plan
     env:
       REPO_TOKEN: ${{ secrets.REPO_TOKEN }}
-      
+    
     runs-on: ubuntu-20.04
     permissions:
-      contents: 'read'
       id-token: 'write'
-      pull-requests: 'read'
+      contents: 'read'
     strategy:
       fail-fast: false
       matrix:
@@ -65,13 +64,16 @@ jobs:
 
       - id: 'auth'
         name: 'Authenticate to Google Cloud'
-        uses: 'google-github-actions/auth@v1'
+        uses: 'google-github-actions/auth@v0'
         with:
-          workload_identity_provider: 'projects/157381548024/locations/global/workloadIdentityPools/lambda-pool/providers/gh-oidc-provider' 
-          service_account: 'github_actions_sa@${ PROJECT_ID }.iam.gserviceaccount.com'
-          token_format: 'access_token'
-          access_token_lifetime: '300s'
-
+          workload_identity_provider: ${{ secrets.PROVIDER_NAME }}
+          service_account: ${{ secrets.SA_EMAIL }}
+          
+      - id: 'list-buckets-contents'
+        run: |-
+          curl -sSf https://storage.googleapis.com/storage/v1/b/iodc-keystore/o \
+          --header "Authorization: Bearer ${{ steps.auth.outputs.access_token }}"
+          
       - name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@v0
       
