--- a/.github/workflows/plan-on-pr.yml
+++ b/.github/workflows/plan-on-pr.yml
@@ -65,6 +65,8 @@ jobs:
       - id: 'auth'
         name: 'Authenticate to Google Cloud'
         uses: 'google-github-actions/auth@v0'
+        env:
+          REPO_TOKEN: ${{ secrets.REPO_TOKEN }}
         with:
           workload_identity_provider: 'projects/157381548024/locations/global/workloadIdentityPools/lambda-pool-auth/providers/gh-oidc-provider'
           service_account: 'github_actions_sa@${{ secrets.PROJECT_ID }}.iam.gserviceaccount.com'
