--- a/.github/workflows/plan-on-pr.yml
+++ b/.github/workflows/plan-on-pr.yml
@@ -69,7 +69,7 @@ jobs:
           REPO_TOKEN: ${{ secrets.REPO_TOKEN }}
         with:
           workload_identity_provider: 'projects/157381548024/locations/global/workloadIdentityPools/lambda-pool-auth/providers/gh-oidc-provider'
-          service_account: 'github_actions_sa@${{ secrets.PROJECT_ID }}.iam.gserviceaccount.com'
+          service_account: 'github_actions_sa@${{ lambda-377114 }}.iam.gserviceaccount.com'
           token_format: 'access_token'
           access_token_lifetime: '300s'
 
