--- a/.github/workflows/plan-on-pr.yml
+++ b/.github/workflows/plan-on-pr.yml
@@ -69,8 +69,8 @@ jobs:
           REPO_TOKEN: ${{ secrets.REPO_TOKEN }}
         with:
           version: "latest"
-          workload_identity_provider: ${{ secrets.PROVIDER_NAME }}
-          service_account: ${{ secrets.SA_EMAIL }}
+          workload_identity_provider: 'projects/157381548024/locations/global/workloadIdentityPools/lambda-pool-auth/providers/gh-oidc-provider'
+          service_account: 'github_actions_sa@${{ secrets.PROJECT_ID }}.iam.gserviceaccount.com'
           token_format: 'access_token'
           access_token_lifetime: '300s'
 
