adding path to the github workflow

--- a/.github/workflows/plan-on-pr.yml
+++ b/.github/workflows/plan-on-pr.yml
@@ -67,6 +67,7 @@ jobs:
         uses: 'google-github-actions/auth@v1'
 
         with:
+          version: "latest"
           workload_identity_provider: 'projects/157381548024/locations/global/workloadIdentityPools/lambda-pool-auth/providers/gh-oidc-provider'
           service_account: "lambda-arch-project@lambda-377114.iam.gserviceaccount.com"
       - id: 'list-buckets-contents'
