--- a/.github/workflows/plan-on-pr.yml
+++ b/.github/workflows/plan-on-pr.yml
@@ -8,7 +8,7 @@ on:
   pull_request:
     branches: [ "dev" ]     
     paths:
-    - 'iac/**'
+    - 'iac/environment**'
 
 concurrency: 
   group: ${{ github.action == 'Google Cloud IaC Create Resources' }}
@@ -17,7 +17,7 @@ concurrency:
 defaults:
   run:
     shell: bash
-    working-directory: ./iac
+    working-directory: ./iac/environment**
 
 jobs:
   lint:
