--- a/.github/workflows/plan-on-pr.yml
+++ b/.github/workflows/plan-on-pr.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [ "dev" ]     
     paths:
-    - 'iac/environment**'
+    - 'iac/environment/'
 
 concurrency: 
   group: ${{ github.action == 'Google Cloud IaC Create Resources' }}
@@ -15,7 +15,7 @@ concurrency:
 defaults:
   run:
     shell: bash
-    working-directory: ./iac/environment**
+    working-directory: ./iac/environment/
 
 jobs:
   lint:
