--- a/.github/workflows/plan-on-pr.yml
+++ b/.github/workflows/plan-on-pr.yml
@@ -3,24 +3,25 @@ name: Plan / Test On PR
 on:
   push:
     branches: [ "local" ]
+    paths:
+    - iac/environment/**
   pull_request:
     branches: [ "dev" ]     
     paths:
-    - 'iac/environment/'
+    - iac/environment/**
 
 concurrency: 
   group: ${{ github.action == 'Google Cloud IaC Create Resources' }}
   cancel-in-progress: true
 
-defaults:
-  run:
-    shell: bash
-    working-directory: ./iac/environment/
-
 jobs:
   lint:
     name: Lint
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
+        working-directory: ./environment
 
     steps:
       - name: Check out code
