--- a/.github/workflows/plan-on-pr.yml
+++ b/.github/workflows/plan-on-pr.yml
@@ -4,11 +4,11 @@ on:
   push:
     branches: [ "local" ]
     paths:
-    - iac/environment/**
+    - iac/**
   pull_request:
     branches: [ "dev" ]     
     paths:
-    - iac/environment/**
+    - iac/**
 
 concurrency: 
   group: ${{ github.action == 'Google Cloud IaC Create Resources' }}
