adding path to the github workflow

--- a/.github/workflows/plan-on-pr.yml
+++ b/.github/workflows/plan-on-pr.yml
@@ -48,9 +48,9 @@ jobs:
       fail-fast: false
       matrix:
         path:
-          - dev
-          - test
-          - prod
+          - 'dev'
+          - 'test'
+          - 'prod'
 
     steps:
       - name: Check out code
@@ -72,7 +72,7 @@ jobs:
           
       - name: Initialize Terraform
         run: |
-          cd environment/${{ matrix.path }}
+          cd iac/environment/${{ matrix.path }}
           terraform init -input=false
 
       - name: Plan Terraform
