--- a/.github/workflows/plan-on-pr.yml
+++ b/.github/workflows/plan-on-pr.yml
@@ -79,7 +79,7 @@ jobs:
         id: plan
         continue-on-error: true
         run: |
-          cd environment/${{ matrix.path }}
+          cd iac/environment/${{ matrix.path }}
           terraform plan -input=false -no-color -out=tfplan \
           && terraform show -no-color tfplan
 
