--- a/.github/workflows/apply-on-merge.yml
+++ b/.github/workflows/apply-on-merge.yml
@@ -1,184 +1,181 @@
-# name: Plan / Apply On Merge
+name: Plan / Apply On Merge
 
-# on:
-#   push:
-#     branches: [ "dev" ]
-#     paths:
-#     - 'iac/**'
-#   pull_request:
-#     branches: [ "main" ] 
-#     paths:
-#     - 'iac/**'
+on:
+  push:
+    branches: [ "local" ]
+    paths:
+    - iac/**
+  pull_request:
+    branches: [ "dev" ]     
+    paths:
+    - iac/**
 
-# concurrency: 
-#   group: ${{ github.action == 'Google Cloud IaC Create Resources' }}
-#   cancel-in-progress: true
+concurrency: 
+  group: ${{ github.action == 'Google Cloud IaC Create Resources' }}
+  cancel-in-progress: true
 
-# defaults:
-#   run:
-#     shell: bash
-#     working-directory: ./iac
+jobs:
+  inform_about_apply:
+    name: Inform About Apply
+    runs-on: ubuntu-20.04
+    defaults:
+      run:
+        shell: bash
+        working-directory: ./environment
 
-# jobs:
-#   inform_about_apply:
-#     name: Inform About Apply
-#     runs-on: ubuntu-20.04
+    steps:
+      - name: Inform on PR that Apply is Running
+        uses: mshick/add-pr-comment@v1
+        with:
+          repo-token: ${{ secrets.REPO_TOKEN }}
+          repo-token-user-login: 'github-actions[bot]'
+          message: |
+            ***Running terraform apply***
+            Results will display here momentarily...
 
-#     steps:
-#       - name: Inform on PR that Apply is Running
-#         uses: mshick/add-pr-comment@v1
-#         with:
-#           repo-token: ${{ secrets.REPO_TOKEN }}
-#           repo-token-user-login: 'github-actions[bot]'
-#           message: |
-#             ***Running terraform apply***
-#             Results will display here momentarily...
-
-#   plan_and_apply:
-#     name: Plan and Apply
-#     env:
-#       REPO_TOKEN: ${{ secrets.REPO_TOKEN }}
+  plan_and_apply:
+    name: Plan and Apply
+    env:
+      REPO_TOKEN: ${{ secrets.REPO_TOKEN }}
   
-#     runs-on: ubuntu-20.04
-#     strategy:
-#       fail-fast: false
-#       matrix:
-#         path:
-#           - dev
-#           - test
-#           - prod
+    runs-on: ubuntu-20.04
+    strategy:
+      fail-fast: false
+      matrix:
+        path:
+          - "dev"
+          - "test"
+          - "prod"
 
-#     steps:
-#       - name: Check out code
-#         uses: actions/checkout@v2
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v2
 
-#       - name: Setup Terraform
-#         uses: hashicorp/setup-terraform@v1
-#         with:
-#           terraform_version: 1.0.9
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v1
+        with:
+          terraform_version: 1.0.9
 
-#       - name: Authenticate to Google Cloud
-#         id: auth
-#         uses: google-github-actions/auth@v0
-#         with:
-#           workload_identity_provider: '${{ secrets.WIF_PROVIDER_NAME }}'  
-#           service_account: '${{ secrets.SERVICE_ACCOUNT_EMAIL }}'
-#       - id: 'list-buckets-contents'
-#         run: |-
-#           curl -sSf https://storage.googleapis.com/storage/v1/b/iodc-keystore/o \
-#           --header "Authorization: Bearer ${{ steps.auth.outputs.access_token }}"
+      - id: 'auth'
+        name: 'Authenticate to Google Cloud'
+        uses: 'google-github-actions/auth@v1'
 
-#       - name: Initialize Terraform
-#         run: |
-#           cd terraform/${{ matrix.path }}
-#           terraform init -input=false
+        with:
+          version: "latest"
+          workload_identity_provider: 'projects/157381548024/locations/global/workloadIdentityPools/lambda-pool-auth/providers/gh-oidc-provider'
+          service_account: "lambda-arch-project@lambda-377114.iam.gserviceaccount.com"
 
-#       - name: Plan Terraform
-#         id: plan
-#         continue-on-error: true
-#         run: |
-#           cd terraform/${{ matrix.path }}
-#           terraform plan -input=false -no-color -out=tfplan \
-#           && terraform show -no-color tfplan
+      - name: Initialize Terraform
+        run: |
+          cd iac/environment/${{ matrix.path }}
+          terraform init -input=false
 
-#       # Sed is taking all lines that begin with one or more spaces followed by a `+` or `-`.
-#       # It stores the amount of spaces in `\1` and the +/- in `\2`.
-#       # Then replace that portion of the line with `\2\1` (+/- followed by the number of matched spaces).
-#       - name: Reformat Plan
-#         if: steps.plan.outcome == 'success'
-#         run: |
-#           echo '${{ steps.plan.outputs.stdout || steps.plan.outputs.stderr }}' \
-#           | sed -E 's/^([[:space:]]+)([-+])/\2\1/g' > plan.txt
+      - name: Plan Terraform
+        id: plan
+        continue-on-error: true
+        run: |
+          cd iac/environment/${{ matrix.path }}
+          terraform plan -input=false -no-color -out=tfplan \
+          && terraform show -no-color tfplan
 
-#       - name: Put Plan in Env Var
-#         if: steps.plan.outcome == 'success'
-#         run: |
-#           PLAN=$(cat plan.txt)
-#           echo "PLAN<<EOF" >> $GITHUB_ENV
-#           echo "$PLAN" >> $GITHUB_ENV
-#           echo "EOF" >> $GITHUB_ENV
+      # Sed is taking all lines that begin with one or more spaces followed by a `+` or `-`.
+      # It stores the amount of spaces in `\1` and the +/- in `\2`.
+      # Then replace that portion of the line with `\2\1` (+/- followed by the number of matched spaces).
+      - name: Reformat Plan
+        if: steps.plan.outcome == 'success'
+        run: |
+          echo '${{ steps.plan.outputs.stdout || steps.plan.outputs.stderr }}' \
+          | sed -E 's/^([[:space:]]+)([-+])/\2\1/g' > plan.txt
 
-#       - name: Apply Terraform
-#         if: steps.plan.outcome == 'success'
-#         id: apply
-#         continue-on-error: true
-#         run: |
-#           cd terraform/${{ matrix.path }}
-#           terraform apply \
-#             -input=false \
-#             -no-color \
-#             tfplan
+      - name: Put Plan in Env Var
+        if: steps.plan.outcome == 'success'
+        run: |
+          PLAN=$(cat plan.txt)
+          echo "PLAN<<EOF" >> $GITHUB_ENV
+          echo "$PLAN" >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
 
-#       - name: Post Plan and Apply to GitHub PR
-#         if: steps.plan.outcome == 'success' && steps.apply.outcome == 'success'
-#         uses: mshick/add-pr-comment@v1
-#         with:
-#           repo-token: ${{ secrets.GITHUB_TOKEN }}
-#           repo-token-user-login: 'github-actions[bot]'
-#           message: |
-#             Applying **${{ matrix.path }}**:
+      - name: Apply Terraform
+        if: steps.plan.outcome == 'success'
+        id: apply
+        continue-on-error: true
+        run: |
+          cd iac/environment/${{ matrix.path }}
+          terraform apply \
+            -input=false \
+            -no-color \
+            tfplan
 
-#             ```diff
-#             ${{ env.PLAN }}
-#             ```
+      - name: Post Plan and Apply to GitHub PR
+        if: steps.plan.outcome == 'success' && steps.apply.outcome == 'success'
+        uses: mshick/add-pr-comment@v1
+        with:
+          repo-token: ${{ secrets.REPO_TOKEN }}
+          repo-token-user-login: 'github-actions[bot]'
+          message: |
+            Applying **${{ matrix.path }}**:
 
-#             ```
-#             ${{ steps.apply.outputs.stdout }}
-#             ```
+            ```diff
+            ${{ env.PLAN }}
+            ```
 
-#       - name: Post Plan Failure
-#         if: steps.plan.outcome == 'failure'
-#         uses: mshick/add-pr-comment@v1
-#         with:
-#           repo-token: ${{ secrets.REPO_TOKEN }}
-#           repo-token-user-login: 'github-actions[bot]'
-#           message: |
-#             Plan failed for **${{ matrix.path }}**:
+            ```
+            ${{ steps.apply.outputs.stdout }}
+            ```
 
-#             ```
-#             ${{ steps.plan.outputs.stderr }}
-#             ```
+      - name: Post Plan Failure
+        if: steps.plan.outcome == 'failure'
+        uses: mshick/add-pr-comment@v1
+        with:
+          repo-token: ${{ secrets.REPO_TOKEN }}
+          repo-token-user-login: 'github-actions[bot]'
+          message: |
+            Plan failed for **${{ matrix.path }}**:
 
-#       - name: Post Apply Failure
-#         if: steps.apply.outcome == 'failure'
-#         uses: mshick/add-pr-comment@v1
-#         with:
-#           repo-token: ${{ secrets.REPO_TOKEN }}
-#           repo-token-user-login: 'github-actions[bot]'
-#           message: |
-#             Apply failed for **${{ matrix.path }}**:
+            ```
+            ${{ steps.plan.outputs.stderr }}
+            ```
 
-#             ```
-#             ${{ steps.apply.outputs.stderr }}
-#             ```
+      - name: Post Apply Failure
+        if: steps.apply.outcome == 'failure'
+        uses: mshick/add-pr-comment@v1
+        with:
+          repo-token: ${{ secrets.REPO_TOKEN }}
+          repo-token-user-login: 'github-actions[bot]'
+          message: |
+            Apply failed for **${{ matrix.path }}**:
 
-#   slack_notification:
-#     name: 'Slack Notification'
-#     runs-on: ubuntu-latest
-#     needs: [plan_and_apply]
-#     if: always()
+            ```
+            ${{ steps.apply.outputs.stderr }}
+            ```
 
-#     steps:
-#     - uses: actions/checkout@v2 
+  slack_notification:
+    name: 'Slack Notification'
+    runs-on: ubuntu-latest
+    needs: [plan_and_apply]
+    if: always()
 
-#     - name: Apply Slack Notification
-#       uses: rtCamp/action-slack-notify@v2
-#       if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-#       env:
-#         SLACK_CHANNEL: captain-alert
-#         SLACK_COLOR: ${{ needs.terraform_apply.result }}
-#         SLACK_TITLE: ${{ github.repository }}
-#         SLACK_MESSAGE: ${{ github.event.head_commit.message }}
-#         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-#         SLACK_FOOTER: 'Terraform Github Actions Main Branch Alert'
+    steps:
+    - uses: actions/checkout@v2 
 
-#     - name: Plan Slack Notification
-#       uses: rtCamp/action-slack-notify@v2
-#       if: github.ref != 'refs/heads/main' && github.event_name == 'push'
-#       env:
-#         SLACK_CHANNEL: captain-alert
-#         SLACK_COLOR: ${{ needs.terraform_plan.result }}
-#         SLACK_TITLE: ${{ github.repository }}
-#         SLACK_MESSAGE: ${{ github.event.head_commit.message }}
-#         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-#         SLACK_FOOTER: 'Terraform Github Actions Feature Branch Push Alert'
+    - name: Apply Slack Notification
+      uses: rtCamp/action-slack-notify@v2
+      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+      env:
+        SLACK_CHANNEL: captain-alert
+        SLACK_COLOR: ${{ needs.terraform_apply.result }}
+        SLACK_TITLE: ${{ github.repository }}
+        SLACK_MESSAGE: ${{ github.event.head_commit.message }}
+        SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+        SLACK_FOOTER: 'Terraform Github Actions Main Branch Alert'
+
+    - name: Plan Slack Notification
+      uses: rtCamp/action-slack-notify@v2
+      if: github.ref != 'refs/heads/main' && github.event_name == 'push'
+      env:
+        SLACK_CHANNEL: captain-alert
+        SLACK_COLOR: ${{ needs.terraform_plan.result }}
+        SLACK_TITLE: ${{ github.repository }}
+        SLACK_MESSAGE: ${{ github.event.head_commit.message }}
+        SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+        SLACK_FOOTER: 'Terraform Github Actions Feature Branch Push Alert'
