adding path to the github workflow

--- a/.github/workflows/apply-on-merge.yml
+++ b/.github/workflows/apply-on-merge.yml
@@ -2,11 +2,11 @@ name: Plan / Apply On Merge
 
 on:
   push:
-    branches: [ "local" ]
+    branches: [ "main" ]
     paths:
     - iac/**
   pull_request:
-    branches: [ "dev" ]     
+    branches: [ "main" ]     
     paths:
     - iac/**
 
