adding path to the github workflow

--- a/.github/workflows/apply-on-merge.yml
+++ b/.github/workflows/apply-on-merge.yml
@@ -2,7 +2,8 @@ name: Plan / Apply On Merge
 
 on:
   push:
-    branches: [ "main" ]
+    branches: 
+    - "main" 
     paths:
     - iac/environment/*
 
