--- a/.github/workflows/plan-on-pr.yml
+++ b/.github/workflows/plan-on-pr.yml
@@ -2,7 +2,8 @@ name: Plan / Test On PR
 
 on:
   pull_request:
-    branches: [ "dev" ]     
+    branches: 
+    - "dev"     
     paths:
     - iac/environment/*
 
