fixing of the github workflow

--- a/.github/workflows/apply-on-merge.yml
+++ b/.github/workflows/apply-on-merge.yml
@@ -69,7 +69,7 @@ jobs:
       - id: 'gcloud'
         name: 'gcloud'
         run: |-
-          gcloud auth login
+          gcloud auth login --no-launch-browser
           gcloud config set project lambda-377114
           gcloud secrets versions access "latest" --secret "oidc-authentication"
 
