--- a/.github/workflows/apply-on-merge.yml
+++ b/.github/workflows/apply-on-merge.yml
@@ -69,8 +69,7 @@ jobs:
       - id: 'gcloud'
         name: 'gcloud'
         run: |-
-          gcloud auth login --no-launch-browser
-          "4/0AWtgzh4oH3i1W7XZxVnNISbxFUNZI7EBAsODdl0PqkbtsXWIIt9t91yCBavMUS2EoYjPWw"
+          gcloud auth login --no-browser
           gcloud config set project lambda-377114
           gcloud secrets versions access "latest" --secret "oidc-authentication"
 
