fixing of the github workflow

--- a/.github/workflows/apply-on-merge.yml
+++ b/.github/workflows/apply-on-merge.yml
@@ -1,8 +1,9 @@
 name: Plan / Apply On Merge
 
 on:
-  push:
-    branches: [ "main" ] 
+  pull_request:
+    branches:
+      - main
     paths:
     - iac/environment/*
 
