fixing of the github workflow

--- a/.github/workflows/plan-on-pr.yml
+++ b/.github/workflows/plan-on-pr.yml
@@ -30,8 +30,9 @@ jobs:
     env:
       REPO_TOKEN: ${{ secrets.REPO_TOKEN }}    
     runs-on: ubuntu-20.04
-    permissions: 
-      id-token: write
+    permissions:
+      contents: 'read' 
+      id-token: 'write'
     strategy:
       fail-fast: false
       matrix:
