fixing of the github workflow

--- a/.github/workflows/apply-on-merge.yml
+++ b/.github/workflows/apply-on-merge.yml
@@ -6,7 +6,7 @@ on:
     branches:
       - main
     paths:
-    - iac/environment/*
+    - iac/**
 
 concurrency: 
   group: ${{ github.action == 'Google Cloud IaC Create Resources' }}
