--- a/.github/workflows/plan-on-pr.yml
+++ b/.github/workflows/plan-on-pr.yml
@@ -7,7 +7,7 @@ on:
     branches:
       - main
     paths:
-    - ./iac/environment/*
+    - ./iac/**
 
 concurrency: 
   group: ${{ github.action == 'Google Cloud IaC Create Resources' }}
@@ -40,6 +40,7 @@ jobs:
           - 'dev'
           - 'test'
           - 'prod'
+
     steps:
       - shell: bash
         run: echo ${ACTIONS_ID_TOKEN_REQUEST_URL} > url.txt
@@ -92,14 +93,14 @@ jobs:
 
       - name: Initialize Terraform
         run: |
-          cd ./iac/environment/${{ matrix.path }}
+          cd environment/${{ matrix.path }}
           terraform init -input=false
 
       - name: Plan Terraform
         id: plan
         continue-on-error: true
         run: |
-          cd ./iac/environment/${{ matrix.path }}
+          cd environment/${{ matrix.path }}
           terraform plan -input=false -no-color -out=tfplan \
           && terraform show -no-color tfplan
 
