fixing of the github workflow

--- a/.github/workflows/plan-on-pr.yml
+++ b/.github/workflows/plan-on-pr.yml
@@ -37,9 +37,9 @@ jobs:
       fail-fast: false
       matrix:
         path:
-          - 'dev'
-          - 'test'
-          - 'prod'
+          - dev
+          - test
+          - prod
 
     steps:
       - name: Checkout the repository to the runner
