--- a/.github/workflows/apply-on-merge.yml
+++ b/.github/workflows/apply-on-merge.yml
@@ -38,9 +38,9 @@ jobs:
       fail-fast: false
       matrix:
         path:
-          - "dev"
-          - "test"
-          - "prod"
+          - dev
+          - test
+          - prod
 
     steps:
       - name: Checkout the repository to the runner
